--- a/src/Components/WorkingArea/WorkingArea.css
+++ b/src/Components/WorkingArea/WorkingArea.css
@@ -13,6 +13,10 @@
     flex: 0.35;
 }
 .changeArea{
-    border: red solid;
+    /* border: red solid; */
     flex:0.65;
+    margin:10px;
+    border-radius: 10px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
