--- a/src/Components/Chat/Chat.css
+++ b/src/Components/Chat/Chat.css
@@ -1,15 +1,18 @@
 .chat-cont{
     /* background-color: red; */
-    height: 100%;
+    /* height: 100%; */
+    height: 81vh;
+    margin:10px 0px;
     overflow:hidden ;
     display: flex;
     flex-direction: column;
+    /* justify-content: space-evenly; */
 }
 .chat-title{
     /* background-color: blue; */
     /* flex:0.11; */
     height: 9vh;
-    margin:0 10px;
+    margin:0px 10px;
     border-radius: 5px;
 }
 .msg-area{
