--- a/src/Components/Chat/SendMsg/SendMsg.css
+++ b/src/Components/Chat/SendMsg/SendMsg.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: space-between;
     height: 100%;
+    /* background-color: yellow; */
 }
 .txtar .ip{
     width: 55vw;
@@ -11,4 +12,16 @@
     border: none;
     resize: none;
     outline: none;
+    /* background-color: blue; */
+}
+.abcde{
+    border: none;
+    background-color: rgba(240, 248, 255, 0);
+    /* background-color: orange; */
+}
+
+@media(max-width:1150px){
+    .txtar .ip{
+        width: 45vw;
+    }
 }
