--- a/src/Components/WorkingArea/WorkingArea.css
+++ b/src/Components/WorkingArea/WorkingArea.css
@@ -24,3 +24,59 @@
     margin-left: 50%;
     transform: translateX(-50%);
 }
+
+.toggle-button{
+    display: none;
+}
+@media (max-width: 1200px) {
+    .pogo{
+        margin-left: 40%;
+    }
+}
+@media (max-width: 845px) {
+    .con {
+      flex-direction: column;
+    }
+    .pogo{
+        margin-left: 45%;
+    }
+  
+    .sidebar {
+      width: 100%;
+      display: none; /* Hide by default */
+    }
+  
+    .sidebar.open {
+      display: block; /* Show when toggled */
+    }
+  
+    .changeArea {
+      width: 100%;
+      margin: 0;
+    }
+    
+    .chatop{
+        display: none;
+    }
+    .toggle-button {
+      display: block;
+      background-color: #007bff;
+      color: #fff;
+      padding: 10px;
+      /* border: none; */
+      border-radius: 5px;
+      cursor: pointer;
+      margin: 2px 10px;
+    }
+  }
+
+  @media (max-width: 500px) {
+    .pogo{
+        margin-left: 35%;
+    }
+}
+@media (max-width: 450px) {
+    .pogo{
+        margin-left: 25%;
+    }
+}
